@@ -27,8 +27,23 @@ class MARCReader(Reader):
         reader = MARCReader(rawmarc)
         for record in reader:
             ...
+
+    If you would like to have your Record object contain unicode strings
+    use the to_unicode parameter:
+
+        reader = MARCReader(file('file.dat'), to_unicode=True)
+
+    This will decode from MARC-8 or UTF-8 depending on the value in the 
+    MARC leader at position 9. 
+    
+    If you find yourself in the unfortunate position of having data that 
+    is utf-8 encoded without the leader set appropriately you can use 
+    the force_utf8 parameter:
+
+        reader = MARCReader(file('file.dat'), to_unicode=True, force_utf8=True)
+
     """
-    def __init__(self, marc_target, to_unicode=False, from_charset='marc-8'):
+    def __init__(self, marc_target, to_unicode=False, force_utf8=False):
         """
         The constructor to which you can pass either raw marc or a file-like
         object. Basically the argument you pass in should be raw MARC in 
@@ -36,7 +51,7 @@ class MARCReader(Reader):
         """
         super(MARCReader, self).__init__()
         self.to_unicode = to_unicode
-        self.from_charset = from_charset
+        self.force_utf8 = force_utf8
         if (hasattr(marc_target, "read") and callable(marc_target.read)):
             self.file_handle = marc_target
         else: 
@@ -57,7 +72,7 @@ class MARCReader(Reader):
         chunk = first5 + chunk
         record = Record(chunk, 
                         to_unicode=self.to_unicode,
-                        from_charset=self.from_charset)
+                        force_utf8=self.force_utf8)
         return record 
 
 def map_records(f, *files):
