@@ -1,7 +1,9 @@
 vx.xx
 - changed default character set handling behavior back to what it was like 
   pre-v2.40. But retained the ability to convert to Unicode when reading
-  by using MARCReader(to_unicode=True).
+  by using MARCReader(to_unicode=True). Also added a parameter force_utf8
+  to force decoding as UTF-8 for use in situations when the record is UTF-8, 
+  but the leader hasn't been coded correctly.
 
 v2.41
 - added non-numeric tag functionality (thanks Mark Matienzo)
